Fixed contextFactory bug

--- a/UrlShortener_Backend/UrlShortener_Backend/appsettings.json
+++ b/UrlShortener_Backend/UrlShortener_Backend/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=UrlShortener;Persist Security Info=True;User ID=app_connection_login;Password=123456"
+  }
 }
